website/versioned_docs/version-1.0.0/0_02_START_ALPHA.md
---
id: version-1.0.0-alpha
title: This is an Alpha release
sidebar_label: Alpha
original_id: alpha
---

OST KIT⍺ in its current release is not yet feature complete. This release is for early user testing. It does the ground work to help create a toolkit that meets the real needs of real businesses.

OST KIT⍺ is a SaaS (software as a service) designed for both business people and developers. Anyone will be able to use OST KIT⍺ to design, create and manage their token economy, setup transactions and users, mint their tokens, simulate transactions and more, without requiring them to have blockchain developers in-house.

For developers, OST KIT⍺ offers a robust set of APIs so that developers can integrate OST KIT⍺ into their existing apps and run operations on their own.

### Key features in OST KIT⍺ include:
* Design & Plan your Branded Token Economy 
* Choose your token name, token symbol, and icon
* Use our Token Economy Planner to set the value of your token and to decide how many tokens to mint
* Define actions you want people to earn and spend your token on, such as user-to-user, company-to-user and user-to-company
* Setup users and airdrop tokens to selected users
* Mint your tokens
* Set the amount for each of your defined actions at the time of creation or provide the amount when executing the action.
* Simulate and execute transactions
* Tranfer funds to an account outside of your branded token economy. Which enables you to deploy contracts on the OpenST network of side blockchains. 
* Monitor and manage your token economy
* View the actual API calls behind programmable actions at various points and access robust developer APIs
* View transfers in your branded token economy on [<u>OST VIEW</u>](http://view.ost.com/), our homegrown block explorer

>_last updated 17th May 2018_; for support see [help.ost.com](https://help.ost.com/support/home)
>
> OST KIT⍺ sandboxapi v1 | OpenST Platform v0.9.2


